[package]
name = "ocpkg"
version = "0.1.0"
edition = "2021"
description = "OpenCog Package Manager"
authors = ["OpenCog Foundation"]
license = "AGPL-3.0"
repository = "https://github.com/opencog/opencog-central"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
